делает адаптивное меню

--- a/source/sass/blocks/_header.scss
+++ b/source/sass/blocks/_header.scss
@@ -1,5 +1,12 @@
 .header {
-	//position: relative;
+	//padding: 0 30px;
+	@include viewport($viewport--lg) {
+	position: relative;
+	}
+}
+
+.header__wrap-nav {
+
 }
 
 .header__bg {
