--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -1,4 +1,5 @@
 .form {
+	display: none;
 	position: absolute;
 	top: 49.9%;
 	//top: 0%;
@@ -13,7 +14,7 @@
 
 .form__title {
 	color: $color-default-white;
-	font-size: 17px;
+	font-size: 1.7rem;
 	font-weight: 600;
 	letter-spacing: -0.025em;
 	text-align: center;
@@ -33,7 +34,7 @@
 	padding: 0 30px;
 
 	&::placeholder {
-		font-size: 15px;
+		font-size: 1.5rem;
 		color: $color-placeholder;
 		letter-spacing: 0.03em;
 	}
