--- a/source/sass/blocks/_nav.scss
+++ b/source/sass/blocks/_nav.scss
@@ -3,36 +3,82 @@
 	top: 0;
 	left: 50%;
 	transform: translate(-50%);
-	width: 873px;
-	min-height: 62px;
-	padding: 0 23px 0 17px;
-	border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-	//border-bottom: 2px solid red;
+	width: 100%;
+	max-width: 933px;
+	padding: 0 30px;
+
+	@include viewport($viewport--md) {
+		position: relative;
+		background-color: $color-default-white;
+	}
 }
 
 .nav__list {
 	display: flex;
 	justify-content: space-between;
 	@include resetList();
+	padding: 0 23px 11px 17px;
 	margin-top: 26px;
+	border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+
+	@include viewport($viewport--md) {
+		width: 320px;
+		margin: 57px auto 50px auto;
+		padding: 0 16px;
+		flex-direction: column;
+	}
 }
 
 .nav__link {
 	display: block;
+	position: relative;
 	text-decoration: none;
 	font-weight: 300;
-	//letter-spacing: 0;
-
 	color: $color-white-alfa;
+	word-break: break-word;
+
+	@include viewport($viewport--md) {
+		margin-top: 60px;
+		font-size: 2rem;
+		line-height: 1.4;
+		letter-spacing: 0.02em;
+		color: $color-font;
+		padding-right: 30px;
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 6px;
+			right: 10px;
+			width: 10px;
+			height: 10px;
+			border-right: 2px solid $color-arrow;
+			border-bottom: 2px solid $color-arrow;
+			transform: rotate(-45deg);
+		}
+	}
+}
+
+.nav__link--margin {
+	@include viewport($viewport--md) {
+		margin-top: 63px;
+	}
+}
+
+.nav__toggle {
+	position: relative;
+	display: none;
+	width: 50px;
+	height: 50px;
 }
 
 .nav__burger {
-	display: none;
 	position: absolute;
-	top: 7px;
-	right: 0;
-	width: 30px;
-	height: 3px;
+	top: 50%;
+	right: 50%;
+	margin-right: -11px;
+	width: 22px;
+	height: 1px;
 	background-color: $color-default-black;
 	transition: $default-transition;
 
@@ -42,9 +88,9 @@
 		position: absolute;
 		top: -7px;
 		right: 0;
-		width: 30px;
-		height: 3px;
-		background-color: $color-default-black;
+		width: 22px;
+		height: 100%;
+		background-color: inherit;
 		transition: $default-transition;
 	}
 
@@ -53,62 +99,80 @@
 	}
 }
 
-// Меняет бергер на крестик
-.nav--menu-active .nav__burger {
-	width: 0;
-}
-.nav--menu-active .nav__burger::before {
-	transform: translateY(7px) rotate(-45deg);
-}
-.nav--menu-active .nav__burger::after {
-	transform: translateY(-7px) rotate(45deg);
-}
+.js-enable {
 
-// открывает меню
-.nav--menu-active .nav__list {
-	position: absolute;
-	display: flex;
-	flex-direction: column;
-	top: 30px;
-	left: -30px;
-	width: 210px;
-	padding: 0 30px 20px 30px;
-	align-items: flex-start;
+	@media (max-width: $viewport--lg) {
+		position: absolute;
+		display: flex;
+		justify-content: flex-end;
+		background-color: transparent;
 
-	@media (min-width: $viewport--lg) {
-		position: static;
-		padding: 0;
-		flex-direction: row;
-		align-items: center;
-		width: unset;
+		& .nav__toggle {
+			display: block;
+			position: absolute;
+			top: 0;
+			right: 0;
+			z-index: 5;
+		}
+
+		& .nav__list {
+			display: none;
+		}
 	}
 }
 
-.nav--menu-active .nav__item {
-	margin-top: 20px;
-	@media (min-width: $viewport--lg) {
-		margin-top: 0;
+.nav--menu-active {
+
+	& .nav__toggle {
+		background-color: transparent;
 	}
-}
-
-// поведение без js
-/*.no-js .nav {
-	@include viewport--md {
-		order: 2;
-		width: 100%;
-		margin: 30px auto 0 auto;
+	// Меняет бургер на крестик
+	& .nav__burger {
+		width: 0;
+		background-color: $color-close;
 	}
-}*/
 
-.nav__toggle {
-	display: none;
-}
+	& .nav__burger::before {
+		transform: translateY(7px) rotate(-45deg);
+	}
 
-.no-js .nav__list {
-	position: static;
-	display: flex;
-	padding: 0;
-	flex-direction: row;
-	align-items: center;
-	width: 100%;
+	& .nav__burger::after {
+		transform: translateY(-7px) rotate(45deg);
+	}
+
+	// показ меню
+	@media (max-width: $viewport--lg) {
+
+		& .nav__list {
+			position: absolute;
+			top: 0;
+			right: 0;
+			display: block;
+			width: 320px;
+			margin: 0;
+			padding: 57px 16px 50px 16px;
+			background-color: $color-default-white;
+		}
+
+		& .nav__link {
+			margin-top: 60px;
+			font-size: 2rem;
+			line-height: 1.4;
+			letter-spacing: 0.02em;
+			color: $color-font;
+			padding-right: 30px;
+
+			&::after {
+				content: '';
+				position: absolute;
+				top: 6px;
+				right: 10px;
+				width: 10px;
+				height: 10px;
+				border-right: 2px solid $color-arrow;
+				border-bottom: 2px solid $color-arrow;
+				transform: rotate(-45deg);
+			}
+		}
+	}
 }
