--- a/source/sass/abstracts/_variables.scss
+++ b/source/sass/abstracts/_variables.scss
@@ -12,12 +12,14 @@ $viewport--xl:                      1440px;
 $color-default-black:             #000000;
 $color-default-white:             #ffffff;
 
-$color-placeholder:                rgba(28, 28, 28, 0.5);
+$color-placeholder:               rgba(28, 28, 28, 0.5);
 $color-arrow:                     rgba(44, 46, 63, 0.5);
 $color-close:                     rgba(20, 21, 23, 0.2);
 $color-white-alfa:                rgba(255, 255, 255, 0.7);
-$color-aqua:                      #0AD9C6;
+$color-accent:                      #0AD9C6;
 $color-font:                      #48494D;
+$color-title:                     #1F1F1F;
+$color-bd-input:                  #C9CCD4;
 
 $retina-dppx: 1.5dppx;
 $retina-dpi: 144dpi;
