--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -13,7 +13,13 @@
 		display: block;
 		position: static;
 		transform: translate(0);
-		margin: auto;
+		margin: 64px auto 0 auto;
+		width: 323px;
+	}
+
+	@include viewport($viewport--md) {
+		width: 320px;
+		padding: 0 16px;
 	}
 }
 
@@ -24,6 +30,16 @@
 	letter-spacing: -0.025em;
 	text-align: center;
 	margin-bottom: 22px;
+
+	@include viewport($viewport--lg) {
+		font-size: 1.8rem;
+		color: $color-default-black;
+		margin-bottom: 31px;
+	}
+
+	@include viewport($viewport--md) {
+		margin-bottom: 23px;
+	}
 }
 
 .form input,
@@ -31,6 +47,10 @@
 	border: none;
 	width: 100%;
 	border-radius: 4px;
+
+	@include viewport($viewport--lg) {
+		border-radius: 6px;
+	}
 }
 
 .form input {
@@ -42,6 +62,15 @@
 		font-size: 1.5rem;
 		color: $color-placeholder;
 		letter-spacing: 0.03em;
+	}
+
+	@include viewport($viewport--lg) {
+		border: 1px solid $color-bd-input;
+		padding-left: 21px;
+	}
+
+	@include viewport($viewport--md) {
+		padding-left: 25px;
 	}
 }
 
