--- a/source/sass/abstracts/_variables.scss
+++ b/source/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-default-black:             #000000;
 $color-default-white:             #ffffff;
 
 $color-placeholder:               rgba(28, 28, 28, 0.5);
+$color-link-footer:               rgba(0, 0, 0, 0.5);
 $color-arrow:                     rgba(44, 46, 63, 0.5);
 $color-close:                     rgba(20, 21, 23, 0.2);
 $color-white-alfa:                rgba(255, 255, 255, 0.7);
