--- a/для-верстки/source/sass/style.scss
+++ b/для-верстки/source/sass/style.scss
@@ -2,8 +2,8 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 @import "abstracts/global";
+@import "blocks/header";
 @import "blocks/nav";
-@import "blocks/offer";
 @import "blocks/form";
 @import "blocks/about";
 @import "blocks/contact";
