новая сборка + хедер

--- a/source/html/components/about.html
+++ b/source/html/components/about.html
@@ -1,4 +1,4 @@
-<section class="about-us">
+<section id="about" class="about-us">
 	<h2 class="about-us__title">Несколько фактов о нас</h2>
 	<ul class="about-us__list">
 		<li class="about-us__item">
