--- a/source/html/components/variety.html
+++ b/source/html/components/variety.html
@@ -1,6 +1,6 @@
-<section class="variety">
+<section id="variety" class="variety">
 	<h2 class="variety__title">Виды велосипедов</h2>
-	<ul>
+	<ul class="variety__list">
 		<li>
 			<a href="#">
 				<figure>
