--- a/source/html/components/offer.html
+++ b/source/html/components/offer.html
@@ -1,24 +1,32 @@
 <div class="offer">
 
-	<div class="offer__wrap">
-		<div class="offer__adv">
-			<img class="offer__logo" src="img/logo.svg" width="68" height="21" alt="Логотип компании">
+	<div class="offer__adv">
+		<div class="offer__height"></div>
+		<div class="offer__info">
+			<a class="offer__logo" aria-label="Логотип">
+				<svg width="68" height="21">
+					<use href="img/sprite_auto.svg#logo"></use>
+				</svg>
+			</a>
 			<p class="offer__title">Мы продаем велосипеды</p>
 			<p class="offer__content">Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
 		</div>
-
-		<section class="form">
-			<h2 class="visually-hidden">Оформить заявку</h2>
-			<form action="" method="post">
-				<p class="form__title">Заполните поля ниже и мы подберем велосипед Вашей мечты</p>
-				<label for="name"><span class="visually-hidden">Введите Ваше Имя</span>
-					<input id="name" type="text" placeholder="Введите Ваше Имя">
-				</label>
-				<label for="phone"><span class="visually-hidden">Введите Ваш номер телефона</span>
-					<input id="phone" type="text" placeholder="Введите Ваш номер телефона">
-				</label>
-				<button type="submit" aria-label="Отправить заявку на велосипед">Подобрать велосипед мечты</button>
-			</form>
-		</section>
 	</div>
+
+	<section class="form">
+		<h2 class="visually-hidden">Оформить заявку</h2>
+		<form action="" method="post">
+			<p class="form__title">Заполните поля ниже и мы подберем велосипед Вашей мечты</p>
+			<div>
+				<input name="name" type="text" placeholder="Введите Ваше Имя" aria-label="Введите Ваше Имя">
+				<span class="form__error form__error--name"></span>
+			</div>
+			<div>
+				<input name="phone" type="text" placeholder="Введите Ваш номер телефона"
+				       aria-label="Введите Ваш номер телефона">
+				<span class="form__error form__error--phone"></span>
+			</div>
+			<button type="submit">Подобрать велосипед мечты</button>
+		</form>
+	</section>
 </div>
