--- a/source/sass/abstracts/global.scss
+++ b/source/sass/abstracts/global.scss
@@ -6,38 +6,21 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
 }
 
 body {
-  font-family: "#{$font-default}", "Arial", sans-serif;
-  font-size: $font-size;
-  font-weight: $font-weight;
-  line-height: $line-height;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
   min-width: 320px;
-	height:100%;
   margin: 0;
-	//background-color: black;
-  //color: $black;
-}
-
-button {
-	display: block;
-	background-color: $color-accent;
-	border: 0;
-}
-
-ul {
-	padding: 0;
-	margin: 0;
-	list-style: none;
 }
 
 .body-lock {
   overflow-y: scroll;
   position:fixed;
 }
-
 
 .visually-hidden {
   position: absolute;
