--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,37 +1,36 @@
-.header {
-	//outline: 1px dashed tomato;
-}
-
 .nav {
-	display: none;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	padding: 0 30px;
+	position: relative;
+	padding: 25px 30px 0 30px;
+	@media (max-width: $viewport--lg) {
+		padding: 0;
+	}
 }
 
 .nav__list {
 	display: flex;
+	flex-wrap: wrap;
 	width: 873px;
-	justify-content: space-between;
 	padding: 0 23px 11px 17px;
-	margin: 26px auto 0 auto;
+	margin: 0 auto;
+	justify-content: space-between;
+	list-style: none;
 	border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 
-	@include viewport($viewport--lg) {
-/*		width: 320px;
-		margin: 57px auto 50px auto;
-		padding: 0 16px;
-		flex-direction: column;
-		outline: 1px dashed tomato;*/
+	@media (max-width: $viewport--lg) {
 		position: absolute;
 		top: 0;
 		right: 0;
-		display: block;
 		width: 320px;
 		margin: 0;
 		padding: 57px 16px 50px 16px;
 		background-color: $color-default-white;
+		z-index: 4;
+	}
+
+	@media (max-width: $viewport--md) {
+		position: static;
+		margin: auto;
+		width: 320px;
 	}
 }
 
@@ -42,10 +41,15 @@
 	font-weight: 300;
 	color: $color-white-alfa;
 	word-break: break-word;
+	transition: color $default-transition;
 
-	@include viewport($viewport--lg) {
+	&:hover {
+		color: $color-accent;
+	}
+
+	@media (max-width: $viewport--lg) {
 		margin-top: 60px;
-		font-size: 2rem;
+		font-size: 20px;
 		line-height: 1.4;
 		letter-spacing: 0.02em;
 		color: $color-font;
@@ -66,18 +70,20 @@
 }
 
 .nav__link--margin {
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		margin-top: 63px;
 	}
 }
 
 .nav__toggle {
+	display: none;
+	position: absolute;
 	top: 0;
 	right: 0;
-	position: relative;
-	display: none;
 	width: 50px;
 	height: 50px;
+	background-color: $color-accent;
+	border: 0;
 }
 
 .nav__burger {
@@ -146,5 +152,9 @@
 
 	 .nav__list {
 		display: block;
+
+		 @media (max-width: $viewport--md) {
+				 position: absolute;
+		 }
 	}
 }
