--- a/для-верстки/source/sass/blocks/_about.scss
+++ b/для-верстки/source/sass/blocks/_about.scss
@@ -2,23 +2,25 @@
 	margin-top: 145px;
 	letter-spacing: -0.04em;
 
-	@include viewport($viewport--lg) {
+	@media (max-width: $viewport--lg) {
 		margin-top: 72px;
 	}
 
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		margin-top: 70px;
 	}
 }
 
 .about-us__title {
-	@include font(3, 600, 1);
+	font-size: 30px;
+	font-weight: 600;
+	line-height: 1;
 	text-align: center;
 	margin-left: 17px;
 	margin-bottom: 48px;
 
-	@include viewport($viewport--lg) {
-		font-size: 2.4rem;
+	@media (max-width: $viewport--lg) {
+		font-size: 24px;
 		line-height: 1.7;
 		margin-left: 0;
 		margin-bottom: 29px;
@@ -34,11 +36,11 @@
 	justify-content: space-between;
 	margin: auto;
 
-	@include viewport($viewport--lg) {
+	@media (max-width: $viewport--lg) {
 		max-width: 616px;
 	}
 
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		max-width: 320px;
 	}
 }
@@ -53,7 +55,7 @@
 		margin-left: 20px;
 	}
 
-	@include viewport($viewport--lg) {
+	@media (max-width: $viewport--lg) {
 		&:nth-child(n + 3){
 			margin-top: 19px;
 		}
@@ -63,7 +65,7 @@
 		}
 	}
 
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		&:not(:first-child) {
 			margin-top: 32px
 		}
@@ -77,7 +79,9 @@
 }
 
 .about-us__count {
-	@include font(2.8, 600, 1.4);
+	font-size: 28px;
+	font-weight: 600;
+	line-height: 1.4;
 	color: $color-accent;
 }
 
@@ -87,7 +91,7 @@
 	letter-spacing: -0.5px;
 	color: $color-default-black;
 
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		font-size: 1.8rem;
 		line-height: 1.87;
 		margin-top: 15px;
@@ -96,13 +100,13 @@
 }
 
 .about-us__content--margin {
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		margin-top: 10px;
 	}
 }
 
 .about-us__content--margin2 {
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		margin-top: 6px;
 	}
 }
