--- a/для-верстки/source/sass/blocks/_header.scss
+++ b/для-верстки/source/sass/blocks/_header.scss
@@ -15,7 +15,7 @@
 		top: 36.4%
 	}
 
-	@include viewport($viewport--lg) {
+	@media (max-width: $viewport--lg) {
 		top: 0;
 		bottom: 0;
 		left: 0;
@@ -26,27 +26,29 @@
 }
 
 .header__logo {
-	@include viewport($viewport--lg) {
+	@media (max-width: $viewport--lg) {
 		margin: 25px 0 0 21px;
 	}
 
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		margin: 25px 0 0 18px;
 	}
 }
 
 .header__title {
-@include font(4.6, 600, 1.4);
+	font-size: 46px;
+	font-weight: 600;
+	line-height: 1.4;
 	margin: 24px 0 24px 0;
 
-	@include viewport($viewport--lg) {
+	@media (max-width: $viewport--lg) {
 		width: 404px;
 		margin: 82px auto 20px auto;
 		font-size: 3rem;
 		line-height: 1.4;
 	}
 
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		text-align: center;
 		width: 288px;
 		margin: 68px auto 20px auto;
@@ -54,18 +56,20 @@
 }
 
 .header__content {
-	@include font(2, 300, 1.6);
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 1.6;
 	color: $color-default-white;
 
-	@include viewport($viewport--lg) {
+	@media (max-width: $viewport--lg) {
 		width: 400px;
 		margin: auto;
-		font-size: 1.8rem;
+		font-size: 18px;
 		line-height: 1.8;
 		text-align: center;
 	}
 
-	@include viewport($viewport--md) {
+	@media (max-width: $viewport--md) {
 		width: 288px;
 	}
 }
