--- a/source/html/components/offer.html
+++ b/source/html/components/offer.html
@@ -1,32 +1,35 @@
 <div class="offer">
 
-	<div class="offer__adv">
-		<div class="offer__height"></div>
-		<div class="offer__info">
-			<a class="offer__logo" aria-label="Логотип">
-				<svg width="68" height="21">
-					<use href="img/sprite_auto.svg#logo"></use>
-				</svg>
-			</a>
-			<p class="offer__title">Мы продаем велосипеды</p>
-			<p class="offer__content">Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
-		</div>
-	</div>
+  <div class="offer__adv">
+    <div class="offer__height"></div>
+    <div class="offer__info">
+      <a class="offer__logo" aria-label="Логотип">
+        <svg width="68" height="21">
+          <use href="img/sprite_auto.svg#logo"></use>
+        </svg>
+      </a>
+      <p class="offer__title">Мы продаем велосипеды</p>
+      <p class="offer__content">Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
+    </div>
+  </div>
 
-	<section class="form">
-		<h2 class="visually-hidden">Оформить заявку</h2>
-		<form action="" method="post">
-			<p class="form__title">Заполните поля ниже и мы подберем велосипед Вашей мечты</p>
-			<div>
-				<input name="name" type="text" placeholder="Введите Ваше Имя" aria-label="Введите Ваше Имя">
-				<span class="form__error form__error--name"></span>
-			</div>
-			<div>
-				<input name="phone" type="text" placeholder="Введите Ваш номер телефона"
-				       aria-label="Введите Ваш номер телефона">
-				<span class="form__error form__error--phone"></span>
-			</div>
-			<button type="submit">Подобрать велосипед мечты</button>
-		</form>
-	</section>
+  <section class="form">
+    <h2 class="visually-hidden">Оформить заявку</h2>
+    <form action="" method="post">
+      <p class="form__title">Заполните поля ниже и мы подберем велосипед Вашей мечты</p>
+      <div class="form__input-wrap">
+        <input name="name" data-validate="true" type="text" pattern="[A-z,А-я]{2,}" maxlength="32"
+                placeholder="Введите Ваше Имя"
+                aria-label="Введите Ваше Имя" required>
+        <span class="form__error form__error--name">Имя должно содержать минимум 2 буквы</span>
+      </div>
+      <div class="form__input-wrap">
+        <input name="phone" data-validate="true" type="text" pattern="\+7\s\([0-9]{3}\)\s[0-9]{3}\s[0-9]{2}\s[0-9]{2}"
+                placeholder="Введите Ваш номер телефона"
+                aria-label="Введите Ваш номер телефона" required>
+        <span class="form__error form__error--phone">Номер телефона слишком короткий</span>
+      </div>
+      <button type="submit">Подобрать велосипед мечты</button>
+    </form>
+  </section>
 </div>
