--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -12,12 +12,13 @@ $color-link-footer:               rgba(0, 0, 0, 0.5);
 $color-arrow:                     rgba(44, 46, 63, 0.5);
 $color-close:                     rgba(20, 21, 23, 0.2);
 $color-white-alfa:                rgba(255, 255, 255, 0.7);
-$color-accent:                      #0AD9C6;
-$color-font:                      #48494D;
-$color-title:                     #1F1F1F;
-$color-bd-input:                  #C9CCD4;
+$color-accent:                      #0ad9c6;
+$color-font:                      #48494d;
+$color-title:                     #1f1f1f;
+$color-bd-input:                  #c9ccd4;
+$color-overlay:                   rgba(255, 255, 255, 0.5);
 
 $retina-dppx: 1.5dppx;
 $retina-dpi: 144dpi;
 
-$default-transition: 0.3s
+$default-transition: 0.3s;
