подключает полифил для ie11

--- a/source/html/components/offer.html
+++ b/source/html/components/offer.html
@@ -5,7 +5,8 @@
     <div class="offer__info">
       <a class="offer__logo" aria-label="Логотип">
         <svg width="68" height="21">
-          <use href="img/sprite_auto.svg#logo"></use>
+<!--          <use href="img/sprite_auto.svg#logo"></use>-->
+          <use href="#logo"></use>
         </svg>
       </a>
       <p class="offer__title">Мы продаем велосипеды</p>
