--- a/source/sass/blocks/variety.scss
+++ b/source/sass/blocks/variety.scss
@@ -1,4 +1,192 @@
+$w: 342px;
+$s: 15px;
+
 .variety {
-  max-width: 1440px;
-  margin: auto;
+  padding-top: 251px;
+
+  @media (max-width: $viewport--lg) {
+    padding-top: 100px;
+  }
+
+  @media (max-width: $viewport--md) {
+    padding-top: 0;
+  }
+}
+
+.variety__title {
+  margin-right: 11px;
+  margin-bottom: 41px;
+  font-weight: 600;
+  font-size: 30px;
+  text-align: center;
+  letter-spacing: -0.03em;
+  color: $color-title;
+
+  @media (max-width: $viewport--lg) {
+    margin: 0 auto 34px auto;
+    font-size: 24px;
+  }
+
+  @media (max-width: $viewport--md) {
+    margin-top: 135px;
+  }
+}
+
+.variety__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  list-style: none;
+  padding: 0 0 0 25px;
+  margin: 0 auto 0 auto;
+  width: 1200px;
+
+  @media (max-width: 1249px) {
+    width: 1000px;
+  }
+
+  @media (max-width: $viewport--lg) {
+    width: 638px;
+    margin-top: 0;
+    padding-left: 0;
+  }
+
+  @media (max-width: $viewport--md) {
+    width: 320px;
+  }
+}
+
+.variety__item {
+  position: relative;
+  width: 342px;
+  margin-bottom: 50px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-style: solid;
+    border-color: $color-accent;
+  }
+
+  &:first-child {
+    margin-top: 10px;
+  }
+
+  &:nth-child(3n + 1)::before {
+    top: 156px;
+    left: -60px;
+    border-radius: 50%;
+    width: 180px;
+    height: 180px;
+    border-width: 27px;
+    z-index: -1;
+  }
+
+  &:nth-child(3n + 2) {
+    margin-top: 38px;
+
+    &::before {
+      top: -17px;
+      left: -18px;
+      width: 47px;
+      height: 47px;
+      border-width: 8px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 28px;
+      right: -24px;
+      width: 47px;
+      height: 47px;
+      border: 8px solid $color-accent;
+    }
+  }
+
+  &:nth-child(3n)::before {
+    top: -32px;
+    left: inherit;
+    right: -38px;
+    border-radius: 50%;
+    width: 95px;
+    height: 95px;
+    border-width: 17px;
+  }
+
+  @media (max-width: $viewport--lg) {
+    width: 270px;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:nth-child(3n + 1)::before {
+      top: 201px;
+      left: -38px;
+      width: 127px;
+      height: 127px;
+      border-width: 18px;
+    }
+
+
+    &:nth-child(3n)::before {
+      top: -21px;
+      right: -25px;
+      width: 68px;
+      height: 68px;
+      border-width: 13px;
+    }
+
+    &:nth-child(3n + 2) {
+      margin-top: 0;
+
+      &::before {
+        display: none;
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  @media (max-width: $viewport--md) {
+    margin-bottom: 42px;
+
+    &:nth-child(3n + 1)::before {
+      left: -24px;
+    }
+
+    &:nth-child(3n)::before {
+      right: -15px;
+    }
+  }
+}
+
+.variety__link {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+
+.variety__wrap-img {
+  margin: 0;
+}
+
+.variety__img {
+  width: 100%;
+  height: auto;
+}
+
+.variety__description {
+  display: block;
+  text-align: center;
+  margin-top: 15px;
+  font-weight: 600;
+  font-size: 22px;
+  letter-spacing: -1px;
 }
