добавляет секцию видео

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,10 +3,11 @@
 @import "abstracts/mixins";
 @import "abstracts/global";
 @import "blocks/nav";
+@import "blocks/intro";
 @import "blocks/offer";
 @import "blocks/form";
 @import "blocks/about";
 @import "blocks/contact";
 @import "blocks/variety";
-@import "blocks/intro";
+@import "blocks/video";
 @import "blocks/modal";
