--- a/source/html/components/video.html
+++ b/source/html/components/video.html
@@ -1,7 +1,7 @@
 <section class="video">
   <div class="video__wrap">
     <div class="video__description">
-      <h2 class="video__title">Видео про велосипеды</h2>
+      <h2 id="video" class="video__title">Видео про велосипеды</h2>
       <p class="video__text">В этом видео мы подробно расскажем про особенности выбора велосипеда для себя. </p>
     </div>
     <div class="video__content">
