--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -12,6 +12,7 @@ $color-link-footer:               rgba(0, 0, 0, 0.5);
 $color-arrow:                     rgba(44, 46, 63, 0.5);
 $color-close:                     rgba(20, 21, 23, 0.2);
 $color-white-alfa:                rgba(255, 255, 255, 0.7);
+$color-black-alfa:                rgba(0, 0, 0, 0.7);
 $color-accent:                      #0ad9c6;
 $color-font:                      #48494d;
 $color-title:                     #1f1f1f;
