--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -63,7 +63,7 @@
     margin-bottom: 41px;
   }
 
-  @media (max-width: $viewport--lg) {
+  @media (max-width: $viewport--md) {
     width: auto;
     margin-bottom: 55px;
   }
