--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,7 +7,8 @@
 @import "blocks/offer";
 @import "blocks/form";
 @import "blocks/about";
-@import "blocks/contact";
 @import "blocks/variety";
 @import "blocks/video";
+@import "blocks/contact";
+@import "blocks/footer";
 @import "blocks/modal";
