--- a/source/html/components/about.html
+++ b/source/html/components/about.html
@@ -6,19 +6,15 @@
       <p class="about-us__content">Самый широкий выбор велосипедов!</p>
     </li>
     <li class="about-us__item">
-      <span class="about-us__count">02</span>
+      <span class="about-us__count ">02</span>
       <p class="about-us__content about-us__content--margin">Доставка велосипедов по всей России!</p>
     </li>
     <li class="about-us__item">
-      <span class="about-us__count">03</span>
+      <span class="about-us__count about-us__count--three">03</span>
       <p class="about-us__content about-us__content--margin2">Большой выбор крутых аксессуаров!</p>
     </li>
     <li class="about-us__item">
-      <span class="about-us__count">04</span>
-      <p class="about-us__content about-us__content--margin2">Профессиональные консультации!</p>
-    </li>
-    <li class="about-us__item">
-      <span class="about-us__count">04</span>
+      <span class="about-us__count about-us__count--four">04</span>
       <p class="about-us__content about-us__content--margin2">Профессиональные консультации!</p>
     </li>
   </ul>
