--- a/source/html/components/offer.html
+++ b/source/html/components/offer.html
@@ -27,7 +27,7 @@
                 placeholder="Введите Ваш номер телефона"
                 aria-label="Введите Ваш номер телефона" required>
       </div>
-      <button type="submit">Подобрать велосипед мечты</button>
+      <button data-pulse type="submit">Подобрать велосипед мечты</button>
     </form>
   </section>
 </div>
