--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -62,23 +62,26 @@
 }
 
 .form button[type="submit"] {
+  position: relative;
   display: block;
+  height: 51px;
+  padding: 0;
   font-size: 15px;
   font-weight: 600;
   line-height: 1.4;
   letter-spacing: -0.02em;
-  height: 51px;
   color: $color-default-black;
   background-color: $color-accent;
   border: 0;
   cursor: pointer;
+  overflow: hidden;
 
   &:hover {
     background-color: $color-btn-hover;
   }
 
   &:active {
-    background-color: $color-accent;
+    color: $color-default-white;
   }
 }
 
