--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -5,10 +5,23 @@
   width: 100vw;
   height: 100vh;
   background-color: $color-overlay;
+  transform: scale(1.2);
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: $default-transition ease-in;
+
+  &--active {
+    transform: scale(1);
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+  }
 }
 
 .modal--invisible {
-  display: none;
+  display: block;
+  opacity: 1;
 }
 
 .modal__wrap {
