--- a/source/html/components/contact.html
+++ b/source/html/components/contact.html
@@ -4,7 +4,7 @@
     <p class="contact__address">Мы находимся по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19</p>
   </div>
   <div class="contact__map-wrap">
-    <iframe class="contact__map"
+    <iframe class="contact__map" title="Интерактивная карта"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533273!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1571675752413!5m2!1sru!2sru"
             style="border:0;" allowfullscreen="">
     </iframe>
