--- a/source/html/components/contact.html
+++ b/source/html/components/contact.html
@@ -1,7 +1,7 @@
 <section class="contact">
   <div class="contact__info">
-    <h2 id="contact" class="contact__title">Как нас найти?</h2>
-    <p class="contact__address">Мы находимся по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19</p>
+    <h2 id="contact">Как нас найти?</h2>
+    <p>Мы находимся по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19</p>
   </div>
   <div class="contact__map-wrap">
     <iframe class="contact__map" title="Интерактивная карта"
