--- a/source/html/components/offer.html
+++ b/source/html/components/offer.html
@@ -8,8 +8,8 @@
           <use href="#logo"></use>
         </svg>
       </a>
-      <p class="offer__title">Мы продаем велосипеды</p>
-      <p class="offer__content">Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
+      <p>Мы продаем велосипеды</p>
+      <p>Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
     </div>
   </div>
 
