--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -70,7 +70,7 @@
   }
 }
 
-.video__title {
+.video__description h2 {
   margin-bottom: 13px;
   font-weight: 600;
   font-size: 30px;
@@ -88,7 +88,7 @@
   }
 }
 
-.video__text {
+.video__description p {
   margin-top: 0;
   margin-left: 18px;
   font-weight: 300;
