--- a/source/html/components/about.html
+++ b/source/html/components/about.html
@@ -1,21 +1,21 @@
 <section id="about" class="about-us">
-  <h2 class="about-us__title">Несколько фактов о нас</h2>
+  <h2>Несколько фактов о нас</h2>
   <ul class="about-us__list">
     <li class="about-us__item">
-      <span class="about-us__count">01</span>
-      <p class="about-us__content">Самый широкий выбор велосипедов!</p>
+      <span>01</span>
+      <p>Самый широкий выбор велосипедов!</p>
     </li>
-    <li class="about-us__item">
-      <span class="about-us__count ">02</span>
-      <p class="about-us__content about-us__content--margin">Доставка велосипедов по всей России!</p>
+    <li class="about-us__item about-us__item--margin">
+      <span>02</span>
+      <p>Доставка велосипедов по всей России!</p>
     </li>
-    <li class="about-us__item">
-      <span class="about-us__count about-us__count--three">03</span>
-      <p class="about-us__content about-us__content--margin2">Большой выбор крутых аксессуаров!</p>
+    <li class="about-us__item about-us__item--margin2 about-us__item--three">
+      <span>03</span>
+      <p>Большой выбор крутых аксессуаров!</p>
     </li>
-    <li class="about-us__item">
-      <span class="about-us__count about-us__count--four">04</span>
-      <p class="about-us__content about-us__content--margin2">Профессиональные консультации!</p>
+    <li class="about-us__item about-us__item--margin2 about-us__item--four">
+      <span>04</span>
+      <p>Профессиональные консультации!</p>
     </li>
   </ul>
 </section>
