--- a/source/html/components/variety.html
+++ b/source/html/components/variety.html
@@ -1,5 +1,5 @@
 <section class="variety">
-  <h2 id="variety" class="variety__title">Виды велосипедов</h2>
+  <h2 id="variety">Виды велосипедов</h2>
   <ul class="variety__list">
     <li class="variety__item">
       <a class="variety__link" href="#">
@@ -10,7 +10,7 @@
             <source media="(max-width: 1023px)" srcset="img/tablet/bike1@1x.jpg 1x, img/tablet/bike1@2x.jpg 2x">
             <!--            1x: 342x503  2x: 684x1006-->
             <source type="image/webp" media="(max-width: 1440px)" srcset="img/desktop/bike1@1x.webp 1x, img/desktop/bike1@2x.webp 2x">
-            <img class="variety__img" src="img/desktop/bike1@1x.jpg" srcset="img/desktop/bike1@2x.jpg 2x" width="342" height="503" alt="Дорожный велосипед">
+            <img src="img/desktop/bike1@1x.jpg" srcset="img/desktop/bike1@2x.jpg 2x" width="342" height="503" alt="Дорожный велосипед">
           </picture>
           <figcaption class="variety__description">
             Дорожный велосипед
@@ -27,7 +27,7 @@
             <source media="(max-width: 1023px)" srcset="img/tablet/bike2@1x.jpg 1x, img/tablet/bike2@2x.jpg 2x">
             <!--            1x: 342x503  2x: 684x1006-->
             <source type="image/webp" media="(max-width: 1440px)" srcset="img/desktop/bike2@1x.webp 1x, img/desktop/bike2@2x.webp 2x">
-            <img class="variety__img" src="img/desktop/bike2@1x.jpg" srcset="img/desktop/bike2@2x.jpg 2x" width="342" height="566" alt="Горный велосипед">
+            <img src="img/desktop/bike2@1x.jpg" srcset="img/desktop/bike2@2x.jpg 2x" width="342" height="566" alt="Горный велосипед">
           </picture>
           <figcaption class="variety__description">
             Горный велосипед
@@ -44,7 +44,7 @@
             <source media="(max-width: 1023px)" srcset="img/tablet/bike3@1x.jpg 1x, img/tablet/bike3@2x.jpg 2x">
             <!--            1x: 342x503  2x: 684x1006-->
             <source type="image/webp" media="(max-width: 1440px)" srcset="img/desktop/bike3@1x.webp 1x, img/desktop/bike3@2x.webp 2x">
-            <img class="variety__img" src="img/desktop/bike3@1x.jpg" srcset="img/desktop/bike3@2x.jpg 2x" width="342" height="513" alt="Детский велосипед">
+            <img src="img/desktop/bike3@1x.jpg" srcset="img/desktop/bike3@2x.jpg 2x" width="342" height="513" alt="Детский велосипед">
           </picture>
           <figcaption class="variety__description">
             Детский велосипед
