--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -32,7 +32,7 @@
   }
 }
 
-.contact__title {
+.contact h2 {
   text-align: center;
   font-weight: 600;
   font-size: 30px;
@@ -49,7 +49,7 @@
   }
 }
 
-.contact__address {
+.contact p {
   padding-right: 5px;
   text-align: center;
   font-size: 17px;
