--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -74,7 +74,7 @@
   }
 }
 
-.offer__title {
+.offer__info p:first-of-type {
   font-size: 46px;
   font-weight: 600;
   line-height: 1.4;
@@ -95,7 +95,7 @@
   }
 }
 
-.offer__content {
+.offer__info p:last-of-type {
   font-size: 20px;
   font-weight: 300;
   line-height: 1.6;
