--- a/source/sass/blocks/variety.scss
+++ b/source/sass/blocks/variety.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.variety__title {
+.variety h2 {
   margin-right: 11px;
   margin-bottom: 41px;
   font-weight: 600;
@@ -174,7 +174,7 @@
   margin: 0;
 }
 
-.variety__img {
+.variety__wrap-img img {
   width: 100%;
   height: auto;
 }
