--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -145,10 +145,9 @@
 }
 
 .nav--menu-active {
-
   @media (max-width: $viewport--md) {
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
@@ -158,7 +157,6 @@
       z-index: 1;
     }
   }
-
 
   .nav__toggle {
     background-color: transparent;
