--- a/source/html/components/contact.html
+++ b/source/html/components/contact.html
@@ -1,6 +1,6 @@
-<section class="contact">
+<section id="contact" class="contact">
   <div class="contact__info">
-    <h2 id="contact">Как нас найти?</h2>
+    <h2>Как нас найти?</h2>
     <p>Мы находимся по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19</p>
   </div>
   <div class="contact__map-wrap">
