--- a/source/html/components/variety.html
+++ b/source/html/components/variety.html
@@ -1,5 +1,5 @@
-<section class="variety">
-  <h2 id="variety">Виды велосипедов</h2>
+<section id="variety" class="variety">
+  <h2>Виды велосипедов</h2>
   <ul class="variety__list">
     <li class="variety__item">
       <a class="variety__link" href="#">
