--- a/source/html/components/video.html
+++ b/source/html/components/video.html
@@ -1,7 +1,7 @@
-<section class="video">
+<section id="video" class="video">
   <div class="video__wrap">
     <div class="video__description">
-      <h2 id="video">Видео про велосипеды</h2>
+      <h2>Видео про велосипеды</h2>
       <p>В этом видео мы подробно расскажем про особенности выбора велосипеда для себя. </p>
     </div>
     <div class="video__content">
