--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -18,20 +18,12 @@
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 
   @media (max-width: $viewport--lg) {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 320px;
-    margin: 0;
-    padding: 57px 16px 50px 16px;
+    display: block;
+    width: 100%;
+    height: 100vh;
+    padding: 101px 0 0 0;
     background-color: $color-default-white;
     z-index: 4;
-  }
-
-  @media (max-width: $viewport--md) {
-    position: static;
-    margin: auto;
-    width: 320px;
   }
 }
 
@@ -39,9 +31,8 @@
   margin-bottom: 11px;
 
   @media (max-width: $viewport--lg) {
-    &:last-child {
-      margin-bottom: 8px;
-    }
+    width: 100%;
+    margin-bottom: 0;
   }
 }
 
@@ -50,9 +41,10 @@
   position: relative;
   text-decoration: none;
   font-weight: 300;
+  font-size: 16px;
   color: $color-white-alfa;
   word-break: break-word;
-  transition: $default-transition;
+  transition: color $default-transition, opacity $default-transition;
 
   &:hover {
     opacity: 0.5;
@@ -64,30 +56,36 @@
   }
 
   @media (max-width: $viewport--lg) {
-    margin-top: 60px;
     font-size: 20px;
+    font-weight: 400;
     line-height: 1.4;
-    letter-spacing: 0.02em;
+    letter-spacing: 0;
     color: $color-font;
-    padding-right: 30px;
+    padding: 15px calc(50% - 150px);
+    margin-bottom: 32px;
+    background-color: $color-gray;
+
+    &:hover {
+      background-color: $color-font;
+    }
 
     &::after {
       content: "";
       position: absolute;
-      top: 6px;
-      right: 10px;
+      top: 50%;
+      margin-top: -5px;
+      right: 26px;
       width: 10px;
       height: 10px;
       border-right: 2px solid $color-arrow;
       border-bottom: 2px solid $color-arrow;
       transform: rotate(-45deg);
     }
-  }
-}
 
-.nav__link--margin {
-  @media (max-width: $viewport--md) {
-    margin-top: 63px;
+    &:hover::after {
+      border-right-color: $color-accent;
+      border-bottom-color: $color-accent;
+    }
   }
 }
 
@@ -100,6 +98,7 @@
   height: 50px;
   background-color: $color-accent;
   border: 0;
+  cursor: pointer;
 }
 
 .nav__burger {
@@ -145,54 +144,27 @@
 }
 
 .nav--menu-active {
-  @media (max-width: $viewport--md) {
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      background-color: $color-default-white;
-      z-index: 1;
-    }
-  }
-
-  .nav__toggle {
-    background-color: transparent;
-  }
-
-  // Меняет бургер на крестик
-  .nav__burger {
-    width: 0;
-    background-color: $color-close;
-  }
-
-  .nav__burger::before {
-    transform: translateY(7px) rotate(-45deg);
-  }
-
-  .nav__burger::after {
-    transform: translateY(-7px) rotate(45deg);
-  }
-
-  .nav__list {
-    display: block;
-
-    @media (max-width: $viewport--lg) {
-      padding-top: 0;
-      padding-bottom: 85px;
+  @media (max-width: $viewport--lg) {
+    .nav__toggle {
+      background-color: transparent;
     }
 
-    @media (max-width: 920px) {
-      padding-bottom: 40px;
+    // Меняет бургер на крестик
+    .nav__burger {
+      width: 0;
+      background-color: $color-close;
     }
 
-    @media (max-width: $viewport--md) {
-      padding-top: 50px;
-      position: absolute;
-      left: 50%;
-      transform: translate(-50%);
+    .nav__burger::before {
+      transform: translateY(7px) rotate(-45deg);
+    }
+
+    .nav__burger::after {
+      transform: translateY(-7px) rotate(45deg);
+    }
+
+    .nav__list {
+      display: block;
     }
   }
 }
