--- a/source/sass/abstracts/global.scss
+++ b/source/sass/abstracts/global.scss
@@ -23,6 +23,10 @@ body {
   overflow-y: scroll;
 }
 
+.body-no-event {
+  pointer-events: none;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
