--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -9,7 +9,7 @@
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
-  transition: $default-transition ease-in;
+  transition: opacity $default-transition ease-in;
   overflow-y: scroll;
 
   &--active {
@@ -22,8 +22,6 @@
 
 .modal__wrap {
   position: fixed;
-  //bottom: 50%;
-
   top: 0;
   left: 0;
   right: 0;
