--- a/source/sass/blocks/variety.scss
+++ b/source/sass/blocks/variety.scss
@@ -171,12 +171,25 @@
 }
 
 .variety__wrap-img {
+  width: 384px;
   margin: 0;
+
+  @media (max-width: $viewport--lg) {
+    width: 270px;
+    height: 300px;
+  }
 }
 
 .variety__wrap-img img {
+  display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
+
+
+  @media (max-width: $viewport--lg) {
+    border-radius: 10px;
+  }
 }
 
 .variety__description {
