--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  right: 0;
+  bottom: 0;
   background-color: $color-overlay;
   transform: scale(1.2);
   visibility: hidden;
@@ -22,14 +22,14 @@
 }
 
 .modal__wrap {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: maX(1px, calc(50vh - 225px));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100%;
+}
+
+.modal__inner {
   padding: 80px 47px;
   width: 480px;
   height: 450px;
