--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -137,7 +137,8 @@
   transition: $default-transition;
   overflow: hidden;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: $color-btn-hover;
   }
 
