--- a/source/sass/abstracts/variables.scss
+++ b/source/sass/abstracts/variables.scss
@@ -22,6 +22,7 @@ $color-overlay:                   rgba(255, 255, 255, 0.5);
 $color-error:                     red;
 $color-btn-hover:                 rgba($color-accent, 0.7);
 $color-gray:                      #f6f6f6;
+$color-bg-img:                    #c9ccd4;
 
 $retina-dppx: 1.5dppx;
 $retina-dpi: 144dpi;
