исправление после теста

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -26,6 +26,7 @@
 
   &::placeholder {
     font-size: 15px;
+    line-height: 20px;
     color: $color-placeholder;
     letter-spacing: 0.03em;
   }
