--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -39,7 +39,7 @@
   margin-right: 12px;
 
   @media (max-width: $viewport--md) {
-    margin-right: 27px;
+    //margin-right: 27px;
   }
 }
 
@@ -50,6 +50,17 @@
   color: $color-link-footer;
   padding-left: 40px;
   word-break: break-word;
+
+  @media (max-width: $viewport--md) {
+    &--phone {
+      margin-left: 15px;
+      margin-right: 30px;
+    }
+
+    &--mail {
+      margin-right: 5px;
+    }
+  }
 
   &:hover {
     opacity: 0.7;
