состояние актив для кнопок

--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -125,9 +125,11 @@
 
 .video__btn {
   position: absolute;
-  bottom: 50%;
-  right: 50%;
-  transform: translate(50%, 50%);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
   width: 65px;
   height: 65px;
   border-radius: 50%;
