--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,10 +1,16 @@
 .about-us {
   max-width: 1440px;
-  margin: 150px auto 0 auto;
+  margin: 150px auto 276px auto;
   letter-spacing: -0.04em;
+  scroll-snap-align: start;
 
   @media (max-width: $viewport--lg) {
     margin-top: 70px;
+    margin-bottom: 100px;
+  }
+
+  @media (max-width: $viewport--md) {
+    margin-bottom: 0;
   }
 }
 
